[project]
name = "link-shortener"
version = "1.0.0"
description = "A simple URL shortener built with FastAPI and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.131.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy[postgresql-asyncpg]>=2.0.48",
    "uvicorn[standard]>=0.40.0",
]

[tool.ruff]
line-length = 100
lint.select = ["ANN", "B", "A", "ICN", "LOG", "PIE", "SIM", "ARG", "I", "N", "E", "W", "F", "UP", "C4"]
lint.ignore = ["B008", "ANN201"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
