[project]
name = "link-shortener"
version = "1.0.0"
description = "A simple URL shortener built with FastAPI and SQLAlchemy."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.131.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.1.0",
    "sqlalchemy[postgresql-asyncpg]>=2.0.48",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = [
    'ANN',
    'B',
    'COM',
    'C4',
    'DTZ',
    'SIM',
    'ARG',
    'PTH',
    'I',
    'C90',
    'N',
    'E',
    'W',
    'F',
    'UP',
    'PL',
    'FURB',
    'RUF',
]
ignore = ['ANN201', 'COM812']

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
